[metadata]
name = cntnr
version = attr: cntnr.__version__
url = https://github.com/jwflory/cntnr
author = Justin W. Flory
license = Mozilla Public License 2.0 (MPLv2)
description = CLI wrapper script to perform basic container management tasks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = containers, Docker, Podman, libpod, CLI, tool
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    cntnr = cntnr.container_cli:main

[options.package_data]
* = *.txt, *.rst
